<resources>
	<string name="app_name">Moloko</string>
	<string name="app_home">Home</string>
	<string name="app_preferences">Settings</string>
	<string name="app_account_preferences">Account Preferences</string>
	<string name="app_tasklists">Lists</string>
	<string name="app_task">Task</string>
   <string name="app_task_edit">Edit Task</string>
   <string name="app_task_edit_multiple">Edit %1$d %2$s</string>
   <string name="app_task_add">Add Task</string>
   <string name="app_task_select_multiple">Select tasks to edit</string>
   <string name="app_change_tags">Change Tags of %1$s</string>
	<string name="app_note">Note</string>
	<string name="app_tagcloud">Tags</string>
   <string name="app_contacts">Contacts</string>
	<string name="app_sort_alpha">Task Name</string>
   <string name="app_sort_prio">Priority</string>
   <string name="app_sort_due_date">Due Date</string>
   <string name="app_titlebar_add_task_hint">New task</string>
   <string name="svc_sync">RTM Synchronization</string>
   <string name="svc_auth">RTM Authentication</string>
   <string name="rec_sync">Moloko Sync-Alarm</string>
   <string name="rec_boot">Moloko boot</string>
   <string name="rtm_full">Remember The Milk</string>
   <string name="rtm_short">RTM</string>
   <string name="g_settings_src_rtm_btn">Take settings from RTM Server</string>
   <string name="g_settings_src_rtm">Loaded from RTM Server</string>
   <string name="g_settings_src_local">Local setting</string>
   <string name="g_no_account">No RTM credentials available</string>
   <string name="moloko_about_info" formatted="false">
      &lt;a href="http://code.google.com/p/moloko/">Moloko&lt;/a> is a Remember The Milk client developed by &lt;a href="mailto:ronny.roehricht@gmail.com">Ronny Röhricht&lt;/a>.
      &lt;br>&lt;br>Version: %1$s&lt;br>&lt;br>
      Special thanks to David Vermeille.&lt;br>&lt;br>
      Moloko is implemented by means of:&lt;br>
                - &lt;a href="http://www.antlr.org">ANTLR&lt;/a> Parser Generator 3.2
         &lt;br>- A modified version of &lt;a href="http://sourceforge.net/projects/rtmjava/">rtmjava&lt;/a> library
         &lt;br>- &lt;a href="http://code.google.com/p/acra/">ACRA&lt;/a> Application Crash Report for Android library
         &lt;br>- &lt;a href="http://code.google.com/p/android-log-collector/">android-log-collector&lt;/a>
         &lt;br>- &lt;a href="http://code.google.com/p/android-wheel/>android-wheel&lt;/a>
   </string>
   <string name="key_api_key">api_key</string>
   <string name="key_shared_secret">shared_secret</string>
   <string name="key_permission">permission</string>
	<string name="key_sync_inverval">sync_interval</string>
	<string name="key_timezone_local">timezone_local</string>
	<string name="key_timezone_sync_with_rtm">timezone_sync_with_rtm</string>
	<string name="key_dateformat_local">dateformat_local</string>
	<string name="key_dateformat_sync_with_rtm">dateformat_sync_with_rtm</string>
	<string name="key_timeformat_local">timeformat_local</string>
	<string name="key_timeformat_sync_with_rtm">timeformat_sync_with_rtm</string>
	<string name="key_def_list_local">def_list_local</string>
	<string name="key_def_list_sync_with_rtm">def_list_sync_with_rtm</string>
	<string name="key_lang_local">lang_local</string>
   <string name="key_lang_sync_with_rtm">lang_sync_with_rtm</string>
   <string name="key_startup_view">startup_view</string>
   <string name="key_task_sort">task_sort</string>
   <string name="key_notify_due_tasks">notify_due_tasks</string>
   <string name="key_notify_due_tasks_before">notify_due_tasks_before</string>
   <string name="key_notify_due_tasks_ringtone">notify_due_tasks_ringtone</string>
   <string name="key_notify_due_tasks_vibrate">notify_due_tasks_vibrate</string>
   <string name="key_notify_due_tasks_led">notify_due_tasks_led</string>
   <string name="key_notify_permanent">notify_permanent</string>
   <string name="key_conn_use_https">conn_use_https</string>
   <string name="key_conn_use_proxy">conn_use_proxy</string>
   <string name="key_conn_proxy_host">conn_proxy_host</string>
   <string name="key_conn_proxy_port">conn_proxy_port</string>
   <string name="key_conn_proxy_user">conn_proxy_user</string>
   <string name="key_conn_proxy_pass">conn_proxy_pass</string>
   <string name="time_interval_15min">Every 15 min.</string>
   <string name="time_interval_30min">Every 30 min.</string>
   <string name="time_interval_1h">Every hour</string>
   <string name="time_interval_12h">Every 12 hours</string>
   <string name="time_interval_daily">Once a day</string>
   <string name="time_5min">5 minutes</string>
   <string name="time_15min">15 minutes</string>
   <string name="time_30min">30 minutes</string>
   <string name="time_1h">1 hour</string>
   <string name="time_12h">12 hours</string>
   <string name="time_24h">1 day</string>
   <string name="phr_please_wait">Please wait</string>
   <string name="phr_now">Now</string>
   <string name="phr_today">Today</string>
   <string name="phr_today_with_date">Today the %1$s</string>
   <string name="phr_tomorrow">Tomorrow</string>
   <string name="phr_tomorrow_with_date">Tomorrow the %1$s</string>
   <string name="phr_establish_connection">Establish an Internet connection to continue.</string>
   <string name="phr_open_with_name">Open %1$s</string>
   <string name="phr_edit_with_name">Edit %1$s</string>
   <string name="phr_ok">OK</string>
   <string name="phr_close">Close</string>
   <string name="phr_settings">Settings</string>
   <string name="phr_none_f">none</string>
   <string name="phr_none_m">none</string>
   <string name="phr_none_mainly">none</string>
   <string name="phr_nothing">nothing</string>
   <string name="phr_sync">Synchronization</string>
   <string name="phr_do_sync">Synchronize</string>
   <string name="phr_cancel_sync">Cancel synchronization</string>
   <string name="phr_on">On</string>
   <string name="phr_off">Off</string>
   <string name="phr_manuell">Manual</string>
   <string name="phr_password_set">set</string>
   <string name="phr_loading">Loading...</string>
   <string name="err_error">Error</string>
   <string name="err_success">Success</string>
   <string name="err_canceled">Canceled</string>
   <string name="err_saving_preferences">Error saving settings</string>
   <string name="err_not_connected">No connection</string>
   <string name="err_add_account_canceled">Adding a new account has been canceled</string>
   <string name="err_unexpected">If you read this RUN AS QUICKLY AS YOU CAN!</string>
   <string name="err_db_typed">Error during database access of %1$s.</string>
   <string name="err_entity_not_found">The %1$s could not be retrieved from the database.\n\nPlease check if the element exists.</string>
   <string name="err_unsupported_intent_action">The action %1$s is not supported by this activity.</string>
   <string name="btn_ok">OK</string>
   <string name="btn_continue">Continue</string>
   <string name="btn_cancel">Cancel</string>
   <string name="btn_new_account">New account</string>
   <string name="btn_edit">Edit</string>
   <string name="btn_done">Done</string>
   <string name="btn_complete">Complete</string>
   <string name="btn_uncomplete">Uncomplete</string>
   <string name="btn_postpone">Postpone</string>
   <string name="btn_add">Add</string>
   <string name="menu_opt_search_task_title">Search for tasks</string>
   <string name="dlg_save_task">Saving task changes...</string>
   <string name="dlg_insert_task">Adding new task...</string>
   <string name="dlg_estimate_picker_title">How long does it take?</string>
   <string name="dlg_due_picker_title">Set due</string>
   <string name="dlg_due_picker_no_time">---</string>
   <string name="dlg_recurr_picker_title">Set recurrence</string>
   <string name="dlg_recurr_picker_every">Every</string>
   <string name="dlg_recurr_picker_after">After</string>
	<string name="search_label">@string/app_name</string>
   <string name="search_hint">Search for tasks</string>
	<string name="home_label_today">@string/phr_today</string>
	<string name="home_label_tomorrow">@string/phr_tomorrow</string>
   <string name="home_label_overdue">Overdue</string>
   <string name="home_label_sync">@string/phr_do_sync</string>
   <string name="startup_no_account">There were no Remember The Milk (RTM) stored credentials. The RTM credentials are necessary to carry out the task synchronization with the RTM server. \n\nYou can now store your RTM credentials and thus enable background synchronization.</string>
   <string name="startup_no_def_list">It can not be started with the standard list because it does not exist.\n\nIt will be started with the default view.</string>
     <string name="startup_toast_no_settings">Settings could not be loaded. Starting with default settings.</string>
   <string name="task_source">from %1$s</string>
   <string name="task_postponed">%1$dx,</string>
   <string name="task_datetime_title_due">When</string>
   <string name="task_datetime_title_estimate">Duration</string>
   <string name="task_datetime_title_recurr">Recurrence</string>
   <string name="task_datetime_estimate_inline">%1$s estimated</string>
   <string name="task_datetime_recurr_inline">Repeat %1$s</string>
   <string name="task_datetime_err_recurr">The recurrence pattern could not be evaluated</string>
   <string name="task_location">Location</string>
   <string name="task_participants">Shared with</string>
   <string name="task_url">URL</string>
      <string name="task_dlg_choose_location_app">Open location with...</string>
      <string name="task_toast_no_google_maps">Location could not be displayed due to missing Google Maps App.</string>
      <string name="task_save_ok">Changes to the task have been saved.</string>
      <string name="task_save_error">Failed to save changes to the task.</string>
   <string name="abstracttask_edit_dlg_done">Applying changes?</string>
   <string name="abstracttask_edit_dlg_cancel">Cancel editing and lose all changes?</string>
   <string name="task_edit_desc_hint">Task Name</string>
   <string name="task_edit_list">List</string>
   <string name="task_edit_priority">Priority</string>
   <string name="task_edit_priority_1">1 - High</string>
   <string name="task_edit_priority_2">2 - Normal</string>
   <string name="task_edit_priority_3">3 - Low</string>
   <string name="task_edit_priority_n">@string/phr_none_f</string>
   <string name="task_edit_tags">Tags</string>
   <string name="task_edit_due">Due</string>
   <string name="task_edit_due_never">Never</string>
   <string name="auth_api_key_label">API key</string>
   <string name="auth_api_shared_secret_label">Shared secret</string>
   <string name="auth_permission_label">Permission</string>
   <string name="acc_pref_sync_interval_title">@string/phr_sync</string>
   <string name="acc_pref_sync_interval_default_value">86400000</string>
   <string name="acc_pref_conn_cat_title">Connection</string>
   <string name="acc_pref_conn_use_https">Use HTTPS (recommended)</string>
   <string name="acc_pref_conn_use_proxy">Use Proxy</string>
   <string name="acc_pref_conn_proxy_host">Hostname</string>
   <string name="acc_pref_conn_proxy_port">Port</string>
   <string name="acc_pref_conn_proxy_user">Username</string>
   <string name="acc_pref_conn_proxy_pass">Password</string>
   <string name="moloko_prefs_rtm_title">RTM Settings</string>
   <string name="moloko_prefs_rtm_summary">Time and date format, default list etc.</string>
   <string name="moloko_prefs_rtm_timezone_title">Timezone</string>
   <string name="moloko_prefs_rtm_dateformat_title">Date Format</string>
   <string name="moloko_prefs_rtm_timeformat_title">Time Format</string>
   <string name="moloko_prefs_rtm_defaultlist_title">Default List</string>
   <string name="moloko_prefs_startup_view_title">Start View</string>
   <string name="moloko_prefs_def_sort_title">Sort tasks</string>
   <string name="moloko_prefs_def_sort_summary">by %s</string>
</resources>