<?xml version="1.0" encoding="utf-8" ?>
<!--
  Copyright (c) 2010 Ronny Röhricht   
  
  This file is part of Moloko.
  
  Moloko is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  Moloko is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with Moloko.  If not, see <http://www.gnu.org/licenses/>.
  
  Contributors:
  	Ronny Röhricht - implementation
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="13dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip">
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_api_key_label" />
            <EditText
                android:id="@+id/auth_edit_api_key"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollHorizontally="true"
                android:capitalize="none"
                android:autoText="false"
                android:inputType="text" />
            <TextView
                android:id="@+id/auth_textview_api_key"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:singleLine="true"
                android:layout_marginTop="5dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:singleLine="true"
                android:layout_marginTop="2dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_api_shared_secret_label" />
            <EditText
                android:id="@+id/auth_edit_shared_secret"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollHorizontally="true"
                android:capitalize="none"
                android:autoText="false"
                android:inputType="text" />                
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_permission_label"
                android:layout_marginTop="25dip"/>
            <Spinner
                android:id="@+id/auth_spin_permission"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/rtm_permissions"/>
            <TextView
                android:id="@+id/auth_text_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip" /> 
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#c6c3c6"
        android:minHeight="54dip"
        android:paddingTop="4dip"
        android:paddingLeft="2dip"
        android:paddingRight="2dip">
        <Button
            android:id="@+id/auth_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dip"
            android:minWidth="100dip"
            android:text="@string/btn_cancel"
            android:onClick="onCancel" />
        <Button
            android:id="@+id/auth_btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dip"
            android:minWidth="100dip"
            android:text="@string/btn_continue"
            android:onClick="onAuthenticate" />
    </FrameLayout>
</LinearLayout>
